--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script>document.getElementsByTagName("html")[0].className += " ";</script>
-    <title>TRS Horsham</title>
+    <title>TRS Property Maintenance Horsham</title>
     <link rel="icon" href="./handyman-transparent.png">
 
     <link
@@ -24,12 +24,11 @@
 
 <body>
   <ul>
-    <li><a>TRS Horsham</a></li>
+    <li><a>TRS Property Maintenance Horsham</a></li>
     <li><a class="active" href="./index.html">Home</a></li>
     <li><a href="./enquiries.html">Enquiries</a></li>
     <li><a href="https://www.facebook.com/TRSPropertyMaintenanceHorsham">Facebook</a></li>
     <li><a>Phone: 0429 865 034</a></li>
-    <li><a>ABN 19 731 161 002</a></li>
     </ul>
 <div class="bot navbar">
   <h1>©️ 2022 Totally Reliable Service Property Maintenance Horsham.</h1>
@@ -37,20 +36,20 @@
   <h1>Phone: 0429 865 034</h1>
   <h1>Email: trspm78@gmail.com</h1>
 </div>
+</div>
 
-<div>
-  <ul class="ul1">
-    <li>- General Carpentry</li>
-    <li>- Doors & Windows</li>
-    <li>- Locks & Screens</li>
-    <li>- Painting & Plastering</li>
-    <li>- Repairs & Maintenance</li>
-    <li>- Lawns & Edging </li>
-    <li>- and so much more.</li>
+  <ul1 class="ul1">
+
+    <li>General Carpentry</li>
+    <li>Doors & Windows</li>
+    <li>Locks & Screens</li>
+    <li>Painting & Plastering</li>
+    <li>Repairs & Maintenance</li>
+    <li>Lawns & Edging </li>
+    <li>and so much more.</li>
     <li>Specializing in smaller jobs</li>
     <li>No Obligation, FREE Quotes.</li>
-  </ul>
-</div>
+  </ul1>
 </body>
 </html>
 
