--- a/enquiries.html
+++ b/enquiries.html
@@ -9,10 +9,9 @@
         <li><a class="active" href="./index.html">Home</a></li>
         <li><a href="./enquiries.html">Enquiries</a></li>
         <li><a href="https://www.facebook.com/TRSPropertyMaintenanceHorsham">Facebook</a></li>
-        <li><a>Phone: 0429 865 034</a></li>
       </ul>
     <div class="navbar">
-      <h1>©️ 2022 Totally Reliable Service Property Maintenance Horsham.</h1>
+      <h1>(c) 2022 Totally Reliable Service Property Maintenance Horsham.</h1>
   <h1>ABN 19 731 161 002</h1>
   <h1>Phone: 0429 865 034</h1>
   <h1>Email: trspm78@gmail.com</h1>
@@ -33,15 +32,15 @@
           <form id="contactForm">
             <p>
               <label>Full Name</label>
-              <input type="text" name="name" id="name" required>
+              <input type="text" placeholder="Full Name" name="name" id="name" required>
             </p>
             <p>
               <label>Email Address</label>
-              <input type="email" name="email" id="email"required>
+              <input type="email" placeholder="Email" name="email" id="email"required>
             </p>
             <p>
                 <label>Phone Number</label>
-                <input type="phone" name="phone" id="phone"required>
+                <input type="phone" placeholder="Phone Number" name="phone" id="phone"required>
               </p>
               <p>
                 <label>Due Date</label>
@@ -49,11 +48,11 @@
               </p>
               <p>
                 <label>Information</label>
-                <input type="information" name="info" id="info"required>
+                <input type="information" placeholder="Type information about your enquiry" name="info" id="info"required>
               </p>
               <p>
                 <label>Budget</label>
-                <input type="number" placeholder="(&dollar;)AUD" or zero for none name="budget" id="budget"required>
+                <input type="number" placeholder="(&dollar;)" name="budget" id="budget"required>
               </p>
             <p>
             <p class="full">
