--- a/index.html
+++ b/index.html
@@ -23,33 +23,26 @@
 </head>
 
 <body>
+  <diV>
   <ul>
     <li><a>TRS Property Maintenance Horsham</a></li>
     <li><a class="active" href="./index.html">Home</a></li>
     <li><a href="./enquiries.html">Enquiries</a></li>
     <li><a href="https://www.facebook.com/TRSPropertyMaintenanceHorsham">Facebook</a></li>
-    <li><a>Phone: 0429 865 034</a></li>
     </ul>
+  </diV>
+  <h1>News</h1>
+  <div class="facebook">
+    <h1>We're currently booked out until July 12th. For important enquiries please contact us via email.</h1>
+    </div>
+    <h1>Our Best Jobs</h1>
+
 <div class="bot navbar">
-  <h1>©️ 2022 Totally Reliable Service Property Maintenance Horsham.</h1>
+  <h1>(c) 2022 Totally Reliable Service Property Maintenance Horsham.</h1>
   <h1>ABN 19 731 161 002</h1>
   <h1>Phone: 0429 865 034</h1>
   <h1>Email: trspm78@gmail.com</h1>
 </div>
-</div>
-
-  <ul1 class="ul1">
-
-    <li>General Carpentry</li>
-    <li>Doors & Windows</li>
-    <li>Locks & Screens</li>
-    <li>Painting & Plastering</li>
-    <li>Repairs & Maintenance</li>
-    <li>Lawns & Edging </li>
-    <li>and so much more.</li>
-    <li>Specializing in smaller jobs</li>
-    <li>No Obligation, FREE Quotes.</li>
-  </ul1>
 </body>
 </html>
 
