--- a/closed.html
+++ b/closed.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script>document.getElementsByTagName("html")[0].className += " ";</script>
-    <title>TRS Property Maintenance Horsham</title>
+    <title>Closed - TRS Horsham</title>
     <link rel="icon" href="./images/handyman-transparent.png">
 
     <link
@@ -47,15 +47,11 @@
     <li><a>Made by Ryder James Reid</a></li>
     </ul>
   </diV>
-  <h1>News</h1>
   <div class="facebook">
-    <h1>We're currently booked out until 14/07/22. For important enquiries please contact us via email.</h1>
+    <h1>Enquiries are currently Closed. Until 14/07/22</h1>
     </div>
-    <h1>Our Best Jobs</h1>
 
-    <div class="bjobs">
-    <img src="./images/banda1.png" width="512" height="512">
-    </div>
+
 <div class="bot navbar">
   <h1>(c) 2022 Totally Reliable Service Property Maintenance Horsham.</h1>
   <h1>ABN 19 731 161 002</h1>
