--- a/enquiries.html
+++ b/enquiries.html
@@ -1,15 +1,35 @@
 <title>Enquiries - TRS Horsham</title>
-<link rel="icon" href="./handyman-transparent.png">
+<link rel="icon" href="./images/handyman-transparent.png">
 
-<link rel="stylesheet" href="./enquiries.css">
+<link rel="stylesheet" href="./css/enquiries.css">
 
 <body>
+  <div>
     <ul>
-        <li><a>TRS Property Maintenance Horsham</a></li>
-        <li><a class="active" href="./index.html">Home</a></li>
-        <li><a href="./enquiries.html">Enquiries</a></li>
-        <li><a href="https://www.facebook.com/TRSPropertyMaintenanceHorsham">Facebook</a></li>
+      <li><a>TRS Property Maintenance Horsham</a></li>
+      <li><a class="active" href="./index.html">Home</a></li>
+      <li><a href="./enquiries.html">Enquiries</a></li>
+      <li><a href="https://www.facebook.com/TRSPropertyMaintenanceHorsham">Facebook</a></li>
+      <li><a></a></li>
+      <li><a></a></li>
+      <li><a></a></li>
+      <li><a></a></li>
+      <li><a></a></li>
+      <li><a></a></li>
+      <li><a></a></li>
+      <li><a></a></li>
+      <li><a></a></li>
+      <li><a></a></li>
+      <li><a></a></li>
+      <li><a></a></li>
+      <li><a></a></li>
+      <li><a></a></li>
+      <li><a></a></li>
+      <li><a></a></li>
+      <li><a></a></li>
+      <li><a>Made by Ryder James Reid</a></li>
       </ul>
+    </div>
     <div class="navbar">
       <h1>(c) 2022 Totally Reliable Service Property Maintenance Horsham.</h1>
   <h1>ABN 19 731 161 002</h1>
@@ -67,7 +87,7 @@
   </body>
   </html>
   <script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
-    <script src="./main.js"></script>
+    <script src="./js/main.js"></script>
   
   <script>
     var host = "https://felix.mikumusic.team.cf/";
