--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
     <link rel="stylesheet" href="./css/style.css">
 
 </head>
-
-<body>
-  <diV>
+<body style="background: url(./images/handyman-yellow.png);">
+<div>
   <ul>
     <li><a>TRS Property Maintenance Horsham</a></li>
     <li><a class="active" href="./index.html">Home</a></li>
@@ -46,12 +45,12 @@
     <li><a></a></li>
     <li><a>Made by Ryder James Reid</a></li>
     </ul>
-  </diV>
-  <h1>News</h1>
+  </div>
   <div class="facebook">
+  <h1>News</h1>
     <h1>We're currently booked out until 14/07/22. For important enquiries please contact us via email.</h1>
-    </div>
     <h1>Our Best Jobs</h1>
+    </div>
 
     <div class="bjobs">
     <img src="./images/banda1.png" width="512" height="512">
