--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <ul>
     <li><a>TRS Property Maintenance Horsham</a></li>
     <li><a class="active" href="./index.html">Home</a></li>
-    <li><a href="./closed.html">Enquiries</a></li>
+    <li><a href="./enquiries.html">Enquiries</a></li>
     <li><a href="https://www.facebook.com/TRSPropertyMaintenanceHorsham">Facebook</a></li>
     <li><a></a></li>
     <li><a></a></li>
