--- a/enquiries.html
+++ b/enquiries.html
@@ -30,6 +30,7 @@
   <h1>ABN 19 731 161 002</h1>
   <h1>CALL 0429 865 034</h1>
   <h1>Email: trspm78@gmail.com</h1>
+  <h1><a href="./privacypolicy.html">Privacy Policy</a></h1>
 </div>
     </div>
   
