--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
     <!-- custom css file link -->
     <link rel="stylesheet" href="./css/style.css">
 
+    <style>
+      img {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+      }
+      </style>
+
 </head>
 <body style="background: url(./images/handyman-yellow.png);">
 <div>
@@ -43,9 +51,21 @@
       <li><a>Made by Ryder James Reid</a></li>
     </ul>
   </div>
+
   <div class="facebook">
   <h1>News</h1>
+  </div>
+
+  <div class="news">
     <h1>We're currently booked out until 14/07/22. For important enquiries please contact us via phone.</h1>
+  </div>
+
+  <div class="facebook">
+      <h1>Our Services</h1>
+    </div>
+
+    <div class="wedo">
+    <img src="./images/wedo.png" style="width:512px;height:350px;">
   </div>
       
 <div class="bot navbar">
