--- a/photo-gallery.html
+++ b/photo-gallery.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script>document.getElementsByTagName("html")[0].className += " ";</script>
-    <title>Best Jobs - TRS Horsham</title>
+    <title>Photo Gallery - TRS Horsham</title>
     <link rel="icon" href="./images/handyman-transparent.png">
 
     <link
@@ -44,7 +44,7 @@
     </ul>
   </div>
   <div class="facebook">
-  <h1>Our Best Jobs
+  <h1>Our Photo Gallery
   </h1>
     </div>
 
