--- a/photo-gallery.html
+++ b/photo-gallery.html
@@ -23,9 +23,9 @@
 <div>
   <ul>
     <li><a>TRS Property Maintenance Horsham</a></li>
-    <li><a class="active" href="./index.html">Home</a></li>
-    <li><a href="./photo-gallery.html">Photo Gallery</a></li>
-    <li><a href="./closed.html">Enquiries</a></li>
+    <li><a class="active" href="./">Home</a></li>
+    <li><a href="./photo-gallery">Photo Gallery</a></li>
+    <li><a href="./closed">Enquiries</a></li>
     <li><a href="https://www.facebook.com/TRSPropertyMaintenanceHorsham">Facebook</a></li>
     <li><a></a></li>
     <li><a></a></li>
