--- a/enquiries.html
+++ b/enquiries.html
@@ -7,9 +7,9 @@
   <div>
     <ul>
         <li><a>TRS Property Maintenance Horsham</a></li>
-        <li><a class="active" href="./index.html">Home</a></li>
-        <li><a href="./photo-gallery.html">Photo Gallery</a></li>
-        <li><a href="./enquiries.html">Enquiries</a></li>
+        <li><a class="active" href="./">Home</a></li>
+        <li><a href="./photo-gallery">Photo Gallery</a></li>
+        <li><a href="./enquiries">Enquiries</a></li>
         <li><a href="https://www.facebook.com/TRSPropertyMaintenanceHorsham">Facebook</a></li>
         <li><a></a></li>
         <li><a></a></li>
@@ -31,7 +31,7 @@
   <h1>ABN 19 731 161 002</h1>
   <h1>CALL 0429 865 034</h1>
   <h1>Email: trspm78@gmail.com</h1>
-  <h1><a href="./privacypolicy.html">Privacy Policy</a></h1>
+  <h1><a href="./privacypolicy">Privacy Policy</a></h1>
 </div>
   
     <div class="container">
