--- a/enquiries.html
+++ b/enquiries.html
@@ -1,7 +1,7 @@
 <title>Enquiries - TRS Horsham</title>
 <link rel="icon" href="./images/handyman-transparent.png">
 
-<link rel="stylesheet" href="css/enquiries.css">
+<link rel="stylesheet" href="enquiries.css">
 
 <body>
   <div>
